SW-7864 Fixed: The delivery information is now correctly displayed on mobile

--- a/engine/Shopware/Themes/Frontend/Responsive/frontend/_public/src/less/_modules/checkout.less
+++ b/engine/Shopware/Themes/Frontend/Responsive/frontend/_public/src/less/_modules/checkout.less
@@ -72,7 +72,6 @@
         .unitize-height(130);
     }
 
-	.product--delivery,
 	.table--media,
 	.table--content {
 		float: left;
@@ -435,6 +434,8 @@
 
 	.product--table {
 		.unitize-margin(20, 0);
+
+        .product--delivery { float: left }
 
         .row--voucher,
         .row--premium-product { height: 100%; }
